--- a/QuequeTheme/appsettings.json
+++ b/QuequeTheme/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BaseAddress": "https://www.zhangqueque.top:5001/" //https://localhost:5001/
 }
