--- a/QuequeTheme/appsettings.json
+++ b/QuequeTheme/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "BaseAddress": "https://localhost:5001/" //https://localhost:5001/  //https://www.zhangqueque.top:5001/
+  "BaseAddress": "https://www.zhangqueque.top:5001/" //https://localhost:5001/  //https://www.zhangqueque.top:5001/
 }
